--- a/Frontend/Views/Home/Index.cshtml
+++ b/Frontend/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
-﻿@{
+﻿@using Frontend.Classes
+@using Frontend.Context
+@using Frontend.Models
+
+@{
+    var db = new AHCDatabase(ViewData["dbContext"] as AHCContext);
     ViewData["Title"] = "Home Page";
 }
 
@@ -22,7 +27,8 @@
                         <!-- Вот здесь поля добавь-->
                     </div>
                     <div class="modal-footer">
-                        <!-- вот здесь кнопки крутые надо -->
+                        <input type="submit" class="mb-3 btn-primary" value="Принять" />
+                        <input type="button" class="mb-3 btn-danger" value="Отклонить" />
                     </div>
                 </div>
             </div>
