--- a/Frontend/Views/Home/Index.cshtml
+++ b/Frontend/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Frontend.Classes
 @using Frontend.Context
 @using Frontend.Models
-
+@model UserModel
 @{
     var db = new AHCDatabase(ViewData["dbContext"] as AHCContext);
     ViewData["Title"] = "Home Page";
