--- a/Frontend/Views/Home/Index.cshtml
+++ b/Frontend/Views/Home/Index.cshtml
@@ -14,21 +14,42 @@
 
 <div>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addmodal">
-        "Добавить"
+        Добавить
     </button>
     <div class="modal fade" id="addmodal" tabindex="-1" aria-labelledby="addmodallabel" aria-hidden="true">
-        <form method="post" action="Home/AddCity">
+        <form method="post" action="Home/AddUser">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        Добавь говна
+                        Создание пользователя
                     </div>
                     <div class="modal-body">
-                        <!-- Вот здесь поля добавь-->
+                        <input asp-for="Name" class="form-controll mb-3" placeholder="Имя" />
+                        <span asp-validation-for="Name"></span>
+
+                        <input asp-for="SurName" class="form-controll mb-3" placeholder="Фамилия" />
+                        <span asp-validation-for="SurName"></span>
+
+                        <input asp-for="MidName" class="form-controll mb-3" placeholder="Отчество" />
+                        <span asp-validation-for="MidName"></span>
+
+                        <input asp-for="City" class="form-controll mb-3" placeholder="Город" />
+                        <span asp-validation-for="City"></span>
+
+                        <input asp-for="Company" class="form-controll mb-3" placeholder="Компания" />
+                        <span asp-validation-for="Name"></span>
+
+                        <input asp-for="Department" class="form-controll mb-3" placeholder="Отдел" />
+                        <span asp-validation-for="Department"></span>
+
+                        <input asp-for="Appointment" class="form-controll mb-3" placeholder="Должность" />
+                        <span asp-validation-for="Appointment"></span>
                     </div>
                     <div class="modal-footer">
                         <input type="submit" class="mb-3 btn-primary" value="Принять" />
-                        <input type="button" class="mb-3 btn-danger" value="Отклонить" />
+                        <button type="button" class="mb-3 btn-danger" data-bs-toggle="modal" data-bs-target="#addmodal">
+                            Отклонить
+                        </button>
                     </div>
                 </div>
             </div>
