--- a/Frontend/hello/templates/computer/index.html
+++ b/Frontend/hello/templates/computer/index.html
@@ -50,7 +50,12 @@
         <input class="form-control form-control-dark w-100" type="text" placeholder="Поиск" aria-label="Search">
         <ul class="navbar-nav px-3">
           <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Войти</a>
+            <a class="nav-link" href="search">Найти</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav px-3">
+          <li class="nav-item text-nowrap">
+            <a class="nav-link" href="login">Войти</a>
           </li>
         </ul>
       </nav>
@@ -95,7 +100,7 @@
             </div>
           </nav>
           <main  class=" row ml-sm-auto h-100 col-lg-10 px-md-4">
-            <H1>СТРАНИЦА КОМПЬЮТЕРА</H1>
+            <H1 class="mb-3">СТРАНИЦА КОМПЬЮТЕРА</H1>
             <div class="justify-content-center col-2">
                 <img width="100" height="100" class="img-circle col" src="https://filearchive.cnews.ru/img/news/2017/08/30/predator600.jpg" alt="">
                 <div>
@@ -112,36 +117,33 @@
                     <button type="button" class="btn text-truncate btn-outline-primary w-100 m-1">Пользователи</button>
                 </div>
             </div>
-            <div class="col row">
+            <div class="col row ml-3 mr-3">
                 <div  class="col row">
-                    <div class="col-3">Электронная почта</div><div class="col align-self-center"> IvanMagerovich@mail.com </div>
+                    <div class="col-3">Электронная почта</div><div class="col "> IvanMagerovich@mail.com </div>
                 </div>
-                <div class="w-100"></div>
+                <div class="w-100 border-top"></div>
                 <div class="col row">
-                    <div class="col-3"> Дата приёма на работу</div><div class="col align-self-center"> 10.09.2003</div>
+                    <div class="col-3"> Дата приёма на работу</div><div class="col "> 10.09.2003</div>
                 </div>
-                <div class="w-100"></div>
+                <div class="w-100 border-top"></div>
                 <div class="col row">
-                    <div class="col-3">Компания</div><div class="col align-self-center"> СФУ </div>
+                    <div class="col-3">Компания</div><div class="col "> СФУ </div>
                 </div>
-                <div class="w-100"></div>
+                <div class="w-100 border-top"></div>
                 <div class="col row">
-                    <div class="col-3">Должность</div><div class="col align-self-center"> Инженер </div>
+                    <div class="col-3">Должность</div><div class="col "> Инженер </div>
                 </div>
-                <div class="w-100"></div>
+                <div class="w-100 border-top"></div>
                 <div class="col row">
-                    <div class="col-3">Город</div><div class="col align-self-center">Красноярск </div>
+                    <div class="col-3">Город</div><div class="col ">Красноярск </div>
                 </div>
             </div>
 
-            <nav class="col-3 sticky-top  mb-3 shadow">
-                <div class="w-100">Действия</div>
-                <button type="button" class="btn btn-outline-primary m-1">Перезапуск</button>
-                    <div class="w-100"></div>
-                    <button type="button" class="btn btn-outline-primary m-1">Выключить</button>
-                    <div class="w-100"></div>
-                    <button type="button" class="btn btn-outline-primary m-1">Подключиться к компьютеру</button>
-                    <div class="w-100"></div>
+            <nav class="col-3 sticky-top row shadow">
+                <h3 class="text-center mt-2">Действия</h3>
+                <button type="button" class="btn btn-outline-primary mb-3">Перезапуск</button>
+                <button type="button" class="btn btn-outline-primary mb-3">Выключить</button>
+                <button type="button" class="btn btn-outline-primary mb-3">Подключиться к компьютеру</button>  
             </nav>
           </main>
           
