--- a/Frontend/hello/templates/profileslist/index.html
+++ b/Frontend/hello/templates/profileslist/index.html
@@ -14,7 +14,29 @@
   {% bootstrap_css %}
   {% bootstrap_javascript %}
   <style>
-    .bd-placeholder-img {
+    .pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+[data-href] { cursor: pointer; }
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 5px;
+}
+.bd-placeholder-img {
       font-size: 1.125rem;
       text-anchor: middle;
       -webkit-user-select: none;
@@ -49,10 +71,10 @@
         </button>
         <input class="form-control form-control-dark w-100" type="text" placeholder="Поиск" aria-label="Search">
         <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="search">Найти</a>
-        </li>
-      </ul>
+            <li class="nav-item text-nowrap">
+              <a class="nav-link" href="search">Найти</a>
+            </li>
+          </ul>
         <ul class="navbar-nav px-3">
           <li class="nav-item text-nowrap">
             <a class="nav-link" href="login">Войти</a>
@@ -98,10 +120,74 @@
               </ul>
             </div>
           </nav>
+          <main  class=" row ml-sm-auto h-100 col-lg-10 px-md-4">
+          <div class="table-responsive">
+            <table class="table table-hover">
+              <tbody>
+                
+                <tr>
+                    <td class="fullName">Имя</td>
+                    <td class="image"></td>
+                    <td class="Job title">Должность</td>
+                    <td class="city">Город</td>
+                    <td class="PhoneNumbre">Номер Телефона</td>
+                    <td class="Email">Эл. Почта</td>
+                    <td class="UserLink"> Аккаунты пользователя </td>        
+            </tr>
+            
+                <tr onclick="window.location='employee';">
+                <td class="fullName">Василий Петрович</td>
+                <td class="image"><img width="100" height="100" src="https://www.bootdey.com/image/400x300/FF8C00" alt=""></td>
+                <td class="Job title">Специалист</td>
+                <td class="city">Красноярск</td>
+                <td class="PhoneNumbre">+79530625969</td>
+                <td class="Email">VasPetr@gma.com</td>
+                <td class="UserLink"> <a href="">Adatum/VasPetr</a> </td>
+              </tr>
+              <tr>
+                <td class="fullName">Василий Петрович</td>
+                <td class="image"><img width="100" height="100" src="https://www.bootdey.com/image/400x300/FF8C00" alt=""></td>
+                <td class="Job title">Специалист</td>
+                <td class="city">Красноярск</td>
+                <td class="PhoneNumbre">+79530625969</td>
+                <td class="Email">VasPetr@gma.com</td>
+                <td class="UserLink"> <a href="">Adatum/VasPetr</a> </td>
+              </tr>
+              <tr>
+                <td class="fullName">Василий Петрович</td>
+                <td class="image"><img width="100" height="100" src="https://www.bootdey.com/image/400x300/FF8C00" alt=""></td>
+                <td class="Job title">Специалист</td>
+                <td class="city">Красноярск</td>
+                <td class="PhoneNumbre">+79530625969</td>
+                <td class="Email">VasPetr@gma.com</td>
+                <td class="UserLink"> <a href="">Adatum/VasPetr</a> </td>
+              </tr>
+              <tr>
+                <td class="fullName">Василий Петрович</td>
+                <td class="image"><img width="100" height="100" src="https://www.bootdey.com/image/400x300/FF8C00" alt=""></td>
+                <td class="Job title">Специалист</td>
+                <td class="city">Красноярск</td>
+                <td class="PhoneNumbre">+79530625969</td>
+                <td class="Email">VasPetr@gma.com</td>
+                <td class="UserLink"> <a href="">Adatum/VasPetr</a> </td>
+              </tr>
+            </tbody></table>
+            <ul class="pagination">
+                <a href="#">«</a>
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">»</a>
+              </ul>
+          </div>
+        </main>
         </div>
       </div>
   {% block content %}
   {% endblock %}
 </div>
+
 </body>
 </html>
